--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,1 +1,13 @@
 <h1> List of Photos</h1>
+
+<% @list_of_all_my_photos.each do |the_photo| %>
+
+<img src = "<%= the_photo.source %>">
+
+<p>
+<%= the_photo.caption %>
+</p>
+
+#buttons wrapped in a div
+
+<% end %>
