--- a/app/views/photos/new_form.html.erb
+++ b/app/views/photos/new_form.html.erb
@@ -1,10 +1,10 @@
 <h1> Add a new photo</h1>
 
 <form action="/create_photo">
-<lable for ="cap">The_caption</lable>
-<input id="cap" type="text" name="da_caption">
-<lable for ="cap">The_source</lable>
-<input id="cap" type="text" name ="da_source">
-<button>Add photo</button>
+<lable for ="Caption">Caption</lable>
+<input id="Caption" type="text" name="da_caption">
+<lable for ="Image URL">Image URL</lable>
+<input id="Image URL" type="text" name ="da_source">
+<button>Create Photo</button>
 
 </form>
