--- a/app/views/photos/edit_form.html.erb
+++ b/app/views/photos/edit_form.html.erb
@@ -1,1 +1,10 @@
-<h1>my photo</h1>
+<h1> Edit Photo <%= @my_photo.id%></h1>
+
+<form action="/update_photo/<%= @my_photo.id%>/">
+<lable for ="Caption">Caption</lable>
+<input id="Caption" type="text" name="da_caption" value= "<%= @my_photo.caption%>">
+<lable for ="Image URL">Image URL</lable>
+<input id="Image URL" type="text" name ="da_source" value= "<%= @my_photo.source%>">
+<button>Update Photo</button>
+
+</form>
