--- a/app/views/photos/new_form.html.erb
+++ b/app/views/photos/new_form.html.erb
@@ -1,10 +1,10 @@
 <h1> Add a new photo</h1>
 
 <form action="/create_photo">
-<lable for ="Caption">Caption</lable>
-<input id="Caption" type="text" name="da_caption">
-<lable for ="Image URL">Image URL</lable>
-<input id="Image URL" type="text" name ="da_source">
+<label for ="Caption">Caption</label>
+<input id="Caption" type="text" name="caption">
+<label for ="Image URL">Image URL</label>
+<input id="Image URL" type="text" name ="image_url">
 <button>Create Photo</button>
 
 </form>
